--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -30,7 +30,10 @@
         justify-content: center;
 
         .navLink {
-            font-size: 25px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 18px;
             font-weight: 500;
             line-break: 20px;
             font-family: 'Bitter', serif;
