--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -24,6 +24,48 @@
         font-family: 'Bitter', serif;
         font-family: 'Smooch Sans', sans-serif;
     }
+
+    .card-container {
+        display: flex;
+        justify-content: center;
+
+        .card-holder {
+            margin-right: 20px;
+            max-width: 200px;
+            transition-delay: ease-in 0.5s;
+            transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+            box-shadow: 0px 0px 5px #939393;
+
+            .card {
+                width: 100%;
+                border-radius: 0px;
+
+                .card-header {
+                    padding: 10px;
+                    border-radius: 0px;
+
+                    .card-img {
+                        width: 100%;
+                        object-fit: cover;
+                        border-radius: 0px;
+                    }
+                }
+            }
+        }
+    }
+
+    .card-holder:hover {
+        padding: 0px;
+        flex-shrink: 1;
+        overflow: hidden;
+        position: relative;
+        border-radius: 0.2rem;
+        transform: translateY(-4px);
+        box-shadow: 0px 3px 10px #939393;
+        transition-delay: ease-in 0.5s;
+        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        transition-property: transform, box-shadow;
+    }
 }
 
 
