--- a/src/components/home/styles.scss
+++ b/src/components/home/styles.scss
@@ -17,6 +17,7 @@
         box-shadow: 0px 0px 5px #939393;
         transition-delay: ease-in 0.5s;
         transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        z-index: -1;
 
         .card-header {
             border: none;
