--- a/src/components/home/styles.scss
+++ b/src/components/home/styles.scss
@@ -58,3 +58,66 @@
         }
     }
 }
+
+#homeDark {
+    background: rgb(22, 22, 22);
+
+    .t-catalogue {
+        text-align: center;
+        font-size: 55px;
+        font-weight: 700;
+        line-break: 20px;
+        font-family: 'Bitter', serif;
+        font-family: 'Smooch Sans', sans-serif;
+        color: white;
+    }
+
+    .productCard {
+        cursor: pointer;
+        border: none;
+        box-shadow: 0px 0px 5px #939393;
+        transition-delay: ease-in 0.5s;
+        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        z-index: 0;
+        background: rgb(37, 37, 37);
+        color:rgb(255, 255, 255);
+
+        .card-header {
+            border: none;
+            padding: 16px;
+            background: rgb(37, 37, 37);
+        }
+
+        .logo {
+            height: 275px;
+            object-fit: contain;
+            background: whitesmoke;
+        }
+
+        .t-text {
+            font-size: 18px;
+            font-weight: 400;
+            line-break: 18px;
+            font-family: 'Bitter', serif;
+            font-family: 'Smooch Sans', sans-serif;
+        }
+    }
+
+    .productCard:hover {
+        padding: 10px;
+        flex-shrink: 1;
+        overflow: hidden;
+        position: relative;
+        margin-bottom: 1.2em;
+        border-radius: 0.2rem;
+        transform: translateY(-8px);
+        box-shadow: 0px 3px 10px #939393;
+        transition-delay: ease-in 0.5s;
+        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        transition-property: transform, box-shadow;
+
+        .card-header {
+            border: none;
+        }
+    }
+}
