--- a/src/components/home/styles.scss
+++ b/src/components/home/styles.scss
@@ -15,13 +15,13 @@
         cursor: pointer;
         border: none;
         box-shadow: 0px 0px 5px #939393;
-        transition-delay: ease-in 0.5s;
-        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-        z-index: -1;
+        transition-delay: ease-in 5s;
+        transition: 1s cubic-bezier(0.23, 1, 0.32, 1);
+        z-index: 0;
 
         .card-header {
             border: none;
-            padding: 16px;
+            padding: 0px;
             background: whitesmoke;
         }
 
@@ -41,7 +41,7 @@
     }
 
     .productCard:hover {
-        padding: 10px;
+        padding: 16px;
         flex-shrink: 1;
         overflow: hidden;
         position: relative;
@@ -49,8 +49,8 @@
         border-radius: 0.2rem;
         transform: translateY(-8px);
         box-shadow: 0px 3px 10px #939393;
-        transition-delay: ease-in 0.5s;
-        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        transition-delay: ease-in 5s;
+        transition: 1s cubic-bezier(0.23, 1, 0.32, 1);
         transition-property: transform, box-shadow;
 
         .card-header {
@@ -60,7 +60,7 @@
 }
 
 #homeDark {
-    background: rgb(22, 22, 22);
+    background: rgb(15, 15, 15);
 
     .t-catalogue {
         text-align: center;
@@ -76,15 +76,15 @@
         cursor: pointer;
         border: none;
         box-shadow: 0px 0px 5px #939393;
-        transition-delay: ease-in 0.5s;
-        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        transition-delay: ease-in-out 5s;
+        transition: 1s cubic-bezier(0.23, 1, 0.32, 1);
         z-index: 0;
-        background: rgb(37, 37, 37);
+        background: rgb(44, 44, 44);
         color:rgb(255, 255, 255);
 
         .card-header {
             border: none;
-            padding: 16px;
+            padding: 0px;
             background: rgb(37, 37, 37);
         }
 
@@ -104,7 +104,7 @@
     }
 
     .productCard:hover {
-        padding: 10px;
+        padding: 16px;
         flex-shrink: 1;
         overflow: hidden;
         position: relative;
@@ -112,8 +112,8 @@
         border-radius: 0.2rem;
         transform: translateY(-8px);
         box-shadow: 0px 3px 10px #939393;
-        transition-delay: ease-in 0.5s;
-        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        transition-delay: ease-in-out 5s;
+        transition: 1s cubic-bezier(0.23, 1, 0.32, 1);
         transition-property: transform, box-shadow;
 
         .card-header {
