--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -5,7 +5,7 @@
 }
 
 .dark {
-    background: rgba(37, 37, 37, 0.753) !important;
+    background: rgb(44, 44, 44);
 }
 
 #myNavBar {
@@ -25,7 +25,7 @@
             align-items: center;
 
             .d-text {
-                margin-left: 7px;
+                margin-left: 25px;
                 font-size: 25px;
                 font-weight: 700;
                 line-break: 18px;
@@ -34,7 +34,7 @@
             }
 
             .d-textDark {
-                margin-left: 7px;
+                margin-left: 25px;
                 font-size: 25px;
                 font-weight: 700;
                 line-break: 18px;
