--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -34,12 +34,12 @@
             max-width: 200px;
             max-height: 200px;
             transition-delay: ease-in 0.5s;
-            transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-            box-shadow: 0px 0px 5px #939393;
 
             .card {
                 width: 100%;
                 border-radius: 0px;
+                box-shadow: 0px 0px 5px #939393;
+                transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 
 
                 .card-header {
@@ -60,13 +60,15 @@
             max-width: 200px;
             max-height: 200px;
             transition-delay: ease-in 0.5s;
-            transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-            background: rgb(44, 44, 44);
-            box-shadow: 0px 0px 5px #939393;
+            
 
             .card {
                 width: 100%;
                 border-radius: 0px;
+                background: rgb(44, 44, 44);
+                color:rgb(255, 255, 255);
+                transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+                box-shadow: 0px 0px 5px #939393;
 
 
                 .card-header {
@@ -83,7 +85,19 @@
         }
     }
 
-    .card-holder:hover {
+    .card-holder:hover .card {
+        padding: 0px;
+        flex-shrink: 1;
+        position: relative;
+        border-radius: 0.2rem;
+        transform: translateY(-4px);
+        box-shadow: 0px 3px 10px #939393;
+        transition-delay: ease-in 0.5s;
+        transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+        transition-property: transform, box-shadow;
+    }
+
+    .card-holderDark:hover .card{
         padding: 0px;
         flex-shrink: 1;
         position: relative;
