--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -16,6 +16,17 @@
         font-family: 'Smooch Sans', sans-serif;
     }
 
+    .t-BO-Dark {
+        text-align: center;
+        text-align: center;
+        font-size: 45px;
+        font-weight: 600;
+        line-break: 18px;
+        font-family: 'Bitter', serif;
+        font-family: 'Smooch Sans', sans-serif;
+        color: white;
+    }
+
     .t-addNewProd {
         text-align: center;
         font-size: 35px;
