--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -392,7 +392,7 @@
         border-bottom: none;
     }
 
-    .modal-content-dark {
+    .modal-content {
         background: #0f0f0f;
         position: relative;
         display: flex;
@@ -417,7 +417,7 @@
     }
 
     .closeBtn:hover { 
-        background: rgb(236, 236, 236);
+        background: rgb(51, 51, 51);
         border-radius: 50%;
     }
 
