--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -77,12 +77,12 @@
 
                 .card-body {
 
-                    .c-text {
-                        font-size: 18px !important;
-                        font-weight: 400 !important;
-                        line-break: 18px !important;
-                        font-family: 'Bitter', serif !important;
-                        font-family: 'Smooch Sans', sans-serif !important;
+                    .card-text {
+                        font-size: 18px;
+                        font-weight: 400;
+                        line-break: 18px;
+                        font-family: 'Bitter', serif;
+                        font-family: 'Smooch Sans', sans-serif;
                     }
                 }
             }
