--- a/src/components/home/styles.scss
+++ b/src/components/home/styles.scss
@@ -2,6 +2,10 @@
 
 #home {
 
+    .card-container {
+        display: flex;
+    }
+
     .t-catalogue {
         text-align: center;
         font-size: 55px;
@@ -18,11 +22,21 @@
         transition-delay: ease-in 5s;
         transition: 1s cubic-bezier(0.23, 1, 0.32, 1);
         z-index: 0;
+        width: 250px;
+        margin-right: 30px;
+        
 
         .card-header {
             border: none;
             padding: 0px;
             background: whitesmoke;
+            height: 68%;
+
+            .card-img {
+                width: 100%;
+                height: 100%;
+                border-radius: 0px;
+            }
         }
 
         .logo {
@@ -41,12 +55,9 @@
     }
 
     .productCard:hover {
-        padding: 16px;
         flex-shrink: 1;
         overflow: hidden;
         position: relative;
-        margin-bottom: 1.2em;
-        border-radius: 0.2rem;
         transform: translateY(-8px);
         box-shadow: 0px 3px 10px #939393;
         transition-delay: ease-in 5s;
@@ -60,7 +71,12 @@
 }
 
 #homeDark {
-    background: rgb(15, 15, 15);
+    // background: rgb(15, 15, 15);
+    min-height: 89vh;
+
+    .card-container {
+        display: flex;
+    }
 
     .t-catalogue {
         text-align: center;
@@ -81,11 +97,21 @@
         z-index: 0;
         background: rgb(44, 44, 44);
         color:rgb(255, 255, 255);
+        width: 250px;
+        margin-right: 30px;
 
         .card-header {
-            border: none;
+            border: 0px;
             padding: 0px;
             background: rgb(37, 37, 37);
+            box-shadow: 0px 0px 5px #939393;
+            height: 68%;
+
+            .card-img {
+                width: 100%;
+                height: 100%;
+                border-radius: 0px;
+            }
         }
 
         .logo {
@@ -104,12 +130,9 @@
     }
 
     .productCard:hover {
-        padding: 16px;
         flex-shrink: 1;
         overflow: hidden;
         position: relative;
-        margin-bottom: 1.2em;
-        border-radius: 0.2rem;
         transform: translateY(-8px);
         box-shadow: 0px 3px 10px #939393;
         transition-delay: ease-in-out 5s;
