--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -107,6 +107,7 @@
                 .card-header {
                     padding: 10px;
                     border-radius: 0px;
+                    height: 58%;
 
                     .card-img {
                         width: 100%;
