--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -458,3 +458,31 @@
     }
 
 }
+
+
+.closeBtn { 
+    background: transparent;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.closeBtn:hover { 
+    background: rgb(51, 51, 51);
+    border-radius: 50%;
+}
+
+.closeBtn:active { 
+    background: transparent;
+    border: none;
+    box-shadow: none;
+    outline: none;
+}
+
+.closeBtn:focus { 
+    background: transparent;
+    border: none;
+    box-shadow: none;
+    outline: none;
+}
