--- a/src/components/home/styles.scss
+++ b/src/components/home/styles.scss
@@ -72,7 +72,7 @@
 
 #homeDark {
     // background: rgb(15, 15, 15);
-    min-height: 89vh;
+    // min-height: 89vh;
 
     .card-container {
         display: flex;
