--- a/src/components/backOffice/styles.scss
+++ b/src/components/backOffice/styles.scss
@@ -19,7 +19,7 @@
     }
 
     .dark-text:hover {
-        color: white;
+        color: black;
         cursor: pointer;
         letter-spacing: 3px;
         transform: rotateY(-4px);
