--- a/src/components/home/styles.scss
+++ b/src/components/home/styles.scss
@@ -7,6 +7,8 @@
     .card-container {
         display: flex;
         flex-wrap: wrap;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 
     .t-catalogue {
