--- a/src/components/home/featured/styles.scss
+++ b/src/components/home/featured/styles.scss
@@ -2,6 +2,10 @@
 
 
 #header {
+    margin-top: 10px;
+    width: 100vw;
+    height: 100vh;
+
     .t-header {
         text-align: center;
         font-size: 55px;
@@ -14,6 +18,10 @@
 }
 
 #header-dark {
+    margin-top: 10px;
+    width: 100vw;
+    height: 100vh;
+
     .t-header {
         text-align: center;
         font-size: 55px;
